edit menu width

--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -271,7 +271,7 @@
 			<menu>
 				<div>
 					<div>
-						<span><a onclick="unfold();">+ 메뉴</a></span>
+						<span><a style="width: 100%; display: inline-block;" onclick="unfold();">+ 메뉴</a></span>
 					</div>
 					<div>
 					<hr>
