--- a/source/working/html/index.html
+++ b/source/working/html/index.html
@@ -22,6 +22,7 @@
                                 font-weight: normal;
                         }
 			html, body{
+				font-family: "맑은 고딕";
 				margin: 0;
 				width: 100%;
 				height: 100%;
